[tool.poetry]
name = "povar"
version = "0.1.0"
description = "A package for Partially-Observed Vector AutoRegressions"
authors = ["Guillaume Dalle <22795598+gdalle@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
networkx = "^2.5.1"
pandas = "^1.2.4"
folium = "^0.12.1"
tqdm = "^4.61.1"
numba = "^0.53.1"
joblib = "^1.0.1"
pyproj = "^3.1.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"
ipykernel = "^5.5.5"
scipy = "^1.6.3"
cvxpy = "^1.1.13"
gurobipy = "^9.1.2"
black = "^21.6b0"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
pyarrow = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
